fix footer-wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -122,8 +122,7 @@ img {
   padding-bottom: 24px;
   display: inline-block;
   position: relative;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-menu-link.current {
@@ -427,7 +426,7 @@ img {
 
 .footer-wrapper {
   display: flex;
-  align-items: flex-start;
+  align-items: baseline;
 }
 
 .footer-logo {
